# PyPackageTemplate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yaml
src/pypackagetemplate/: __init__.py  pypackagetemplate.py
tests/: test_pypackagetemplate.py
