[tool.poetry]
name = "pypackagetemplate"
version = "0.1.0"
description = ""
authors = ["Johann Krauter <17592823+photoniker@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
scriv = {extras = ["toml"], version = "^1.2.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
